Fix: overFlow bug

--- a/src/MainProject/myLandscapes/myLandscapes.style.scss
+++ b/src/MainProject/myLandscapes/myLandscapes.style.scss
@@ -3,7 +3,8 @@
 .my-landscape-page {
   display: flex;
   width: 100%;
-  //height: 100%;
+  height: 100%;
+  overflow: auto;
   padding: 30px;
   flex-direction: column;
 
